vcweb/static/css/guarantee/style.css
/*
Design by Free CSS Templates
http://www.freecsstemplates.org
Released for free under a Creative Commons Attribution 2.5 License
*/

body {
	margin: 0;
	padding: 0;
	background: #FFFFFF url(/static/images/guarantee/img01.gif) repeat-x left top;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 1.1em;
	color: #8A8A8A;
}

h1, h2, h3 {
	margin: 0;
	text-transform: uppercase;
	font-weight: normal;
	color: #549900;
}

h1 { font-size: 44px; }

h2 { font-size: 18px; }

h3 { }

p, ul, ol {
	margin-top: 0;
	line-height: 240%;
	text-align: justify;
}

ul, ol { }

blockquote { }

a { color: #961A06; }

a:hover { text-decoration: none; }

a img {
	border: none;
}

a.external {
    background: url(/static/images/external.png) center right no-repeat;
    padding-right: 13px;
}

img.left {
	float: left;
	margin: 7px 30px 0 0;
}

img.right {
	float: right;
	margin: 7px 0 0 30px;
}

hr { display: none; }

.list1 {
}

.list1 li {
	float: left;
	line-height: normal;
}

.list1 li img {
	margin: 0 30px 30px 0;
}

.list1 li.alt img {
	margin-right: 0;
}

#wrapper {
}

/* Header */

#header-wrapper {
}

#header {
	width: 940px;
	height: 36px;
	margin: 0 auto;
}

/* Menu */

#menu {
	float: left;
	width: 940px;
	height: 36px;
	background: url(/static/images/guarantee/img02.jpg) no-repeat left top;
}

#menu ul {
	margin: 0;
	padding: 0px 0px 0px 0px;
	list-style: none;
	line-height: normal;
}

#menu li {
	display: block;
	float: left;
}

#menu a {
	display: block;
	float: left;
	width: 140px;
	height: 22px;
	padding: 10px 0px 0px 0px;
	background: url(/static/images/guarantee/img04.gif) no-repeat left top;
	text-decoration: none;
	text-align: center;
	text-transform: capitalize;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 0.75em;
	font-weight: bold;
	color: #FFFFFF;
}

#menu a:hover {
	font-size: 0.8em;
	text-decoration: underline; 

}

#menu .current_page_item a {
	background: url(/static/images/guarantee/img03.gif) no-repeat left top;
}

#menu .first {
}
/* Search */

#search {
	float: right;
	width: 260px;
}

#search form {
	float: right;
	margin: 0;
	padding: 4px 0px 0 0;
}

#search fieldset {
	margin: 0;
	padding: 0;
	border: none;
}

#search input {
	float: left;
	font: 12px Georgia, "Times New Roman", Times, serif;
	border: none;
}

#search-text {
	width: 200px;
	height: 18px;
	padding: 3px 0 0 5px;
	border: 1px solid #333333;
	background: #ECF9E4;
	color: #000000;
}

#search-submit {
	height: 21px;
	margin-left: 10px;
	padding: 0px 5px;
	background: #5AA01B;
	color: #FFFFFF;
}

/* Page */

#page {
	width: 940px;
	margin: 0 auto;
	padding: 40px 0px 0px 0px;
}


/** LOGO */

#logo {
	width: 940px;
	height: 94px;
	margin: 0 auto;
}

#logo h1, #logo p {
	margin: 0px;
	line-height: normal;
	text-transform: lowercase;
	font-weight: normal;
	color: #FFFFFF;
}

#logo p {
	margin-top: -4px;
	text-transform: lowercase;
	font-size: 1.4em;
	color: #FFA25D;
}

#logo h1 {
	padding-top: 10px;
	font-size: 2.8em;
	font-family: Georgia, Arial, Helvetica, sans-serif;
}

#logo a {
	text-decoration: none;
	color: #FFA25D;
}

#logo h1 a {
	text-decoration: none;
	color: #FFFFFF;
}


#banner {
	padding-bottom: 20px;
}

/* Content */

#content {
	float: left;
	width: 940px;
}

/* Post */

.post {
	margin-bottom: 45px;
}

.post .title {
	height: 44px;
	padding-left: 15px;
	color: #FFFFFF;
}

.post .title a {
	text-decoration: none;
	text-transform: capitalize;
	font-size: 2em;
	color: #543A2C;
}

.post .date {
}

.post .meta {
	height: 32px;
	margin-left: 2px;
	padding: 4px 30px 2px 15px;
	background: url(/static/images/guarantee/img05.gif) repeat-x left top;
	font-family: Arial, Helvetica, sans-serif;
	font-weight: normal;
	font-size: 1em;
	color: #66665E;
}

.post .meta span {
	display: block;
	margin-top: -10px;
}

.post .meta a { }

.post .entry {
	padding: 10px 15px;
}

.post .links {
	display: block;
	width: 120px;
	height: 18px;
	margin: 0px; 
	padding: 3px 0px 0px 40px;
	background: url(/static/images/guarantee/img06.gif) no-repeat left top;
	text-decoration: none;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 1em;
	text-decoration: none;
	font-weight: bold;
	color: #961A06;
}

.post .comments {
	display: block;
	width: 120px;
	height: 18px;
	margin: 0px; 
	padding: 3px 0px 0px 40px;
	background: url(/static/images/guarantee/img07.gif) no-repeat left top;
	text-decoration: none;
	font-family: Arial, Helvetica, sans-serif;
	font-size: .9em;
	text-decoration: none;
	font-weight: bold;
	color: #961A06;
}

/* Sidebar */

#sidebar {
	float: right;
	width: 240px;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 1em;
}

#sidebar ul {
	margin: 0;
	padding: 0;
	list-style: none;
	line-height: normal;
}

#sidebar li {
	margin-bottom: 30px;
	padding: 0 0 10px 0px;
}

#sidebar li ul {
	margin: 0px 14px;
}

#sidebar li li {
	margin: 0;
	padding: 12px 0px;
	border-bottom: 1px solid #E9E8DD;
	background: url(/static/images/guarantee/img08.gif) no-repeat left 18px;
}

#sidebar li li a {
	padding: 0px 0px 0px 20px;
	font-weight: normal;
	color: #EB5716;
}

#sidebar li li a:hover {
	color: #EB5716;
}

#sidebar p {
	margin: 0;
	padding: 0px 14px;
}

#sidebar h2 {
	height: 30px;
	margin: 0 0 10px 0px;
	padding: 6px 0 2px 14px;
	background: url(/static/images/guarantee/img05.gif) repeat-x left top;
	text-transform: capitalize;
	font-size: 1.5em;
	font-weight: normal;
	color: #543A2C;
}


#sidebar p {
	line-height: 200%;
}

#sidebar a {
	text-align: left;
	text-decoration: none;
	font-weight: bold;
}

/* Calendar */

#calendar {
}

#calendar caption {
	padding-bottom: 5px;
	font-weight: bold;
}

#calendar table {
	width: 100%;
	border-collapse: collapse;
	border-bottom: 1px solid #24130F;
	border-left: 1px solid #24130F;
	border-right: 1px solid #24130F;
}

#calendar thead th {
	padding: 5px 0;
	text-align: center;
	border-top: 1px solid #24130F;
	border-left: 1px solid #24130F;
	background: #24130F;
}

#calendar tbody td {
	padding: 5px 0;
	text-align: center;
	border-top: 1px solid #24130F;
	border-left: 1px solid #24130F;
	border-bottom: 1px solid #24130F;
}

#calendar tfoot td {
	padding: 5px;
	border-left: 1px solid #24130F;
	border-bottom: 1px solid #24130F;
}

#calendar tfoot #next {
	border-top: 1px solid #24130F;
	text-align: right;
}

#calendar tfoot #prev {
	border-top: 1px solid #24130F;
}

#calendar .pad {
	border-bottom: 1px solid #24130F;
}

#calendar #today {
	background: #24130F;
}

/* Footer */

#footer {
	width: 100%;
	height: 100px;
	margin: 0 auto;
	padding: 0;
	background: url(/static/images/guarantee/img02.gif) repeat-x left top;
}

#footer-bgcontent {
}

#footer p {
	margin: 0;
	padding: 15px 0px 0px 0px;
	text-align: center;
	line-height: normal;
	text-transform: uppercase;
	font-size: .6em;
	color: #7B1605;
}

#footer a {
	color: #961A06;
}

